[gd_scene load_steps=4 format=3 uid="uid://bardfnrn6grwc"]

[ext_resource type="Script" path="res://Scripts/UI/trackSelection.gd" id="1_orx78"]
[ext_resource type="Texture2D" uid="uid://c1gax1lttiuyu" path="res://Assets/Sprites/UI/titleScreenBackground.png" id="2_cmn5v"]
[ext_resource type="FontFile" uid="uid://du1ji46cwnufr" path="res://Assets/Fonts/college/collegec.ttf" id="3_x4n2t"]

[node name="trackSelection" type="Node2D"]
script = ExtResource("1_orx78")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.57895, 1.29808)
texture = ExtResource("2_cmn5v")
metadata/_edit_lock_ = true

[node name="titleLabel" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 529.0
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.765026, 0.384565, 0.0148376, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 20
theme_override_constants/shadow_offset_y = 11
theme_override_fonts/font = ExtResource("3_x4n2t")
theme_override_font_sizes/font_size = 200
text = "TRACKS
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="mapOne" type="ColorRect" parent="."]
offset_left = 262.0
offset_top = 374.0
offset_right = 629.5
offset_bottom = 649.0
color = Color(0, 0, 0, 1)

[node name="mapTwo" type="ColorRect" parent="."]
offset_left = 794.0
offset_top = 374.0
offset_right = 1161.5
offset_bottom = 649.0
color = Color(0, 0, 0, 1)

[node name="mapThree" type="ColorRect" parent="."]
offset_left = 1291.0
offset_top = 374.0
offset_right = 1658.5
offset_bottom = 649.0
color = Color(0, 0, 0, 1)

[node name="mapFour" type="ColorRect" parent="."]
offset_left = 512.0
offset_top = 676.0
offset_right = 879.5
offset_bottom = 951.0
color = Color(0, 0, 0, 1)

[node name="mapFive" type="ColorRect" parent="."]
offset_left = 1048.0
offset_top = 676.0
offset_right = 1415.5
offset_bottom = 951.0
color = Color(0, 0, 0, 1)
